php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27443 defined() wrong return type
Submitted: 2004-03-01 01:40 UTC Modified: 2004-03-01 03:05 UTC
Votes:3
Avg. Score:2.7 ± 1.7
Reproduced:3 of 3 (100.0%)
Same Version:2 (66.7%)
Same OS:1 (33.3%)
From: talmage at cableone dot net Assigned:
Status: Closed Package: Unknown/Other Function
PHP Version: 4.3.4 OS: Debian Linux
Private report: No CVE-ID: None
 [2004-03-01 01:40 UTC] talmage at cableone dot net
Description:
------------
defined() does not return boolean, it returns an integer according to gettype()

If you do a gettype() on isset(), it returns the type as boolean. If you do a gettype() on defined() it returns an integer.

The docs state defined() returns boolean and it makes logical sense to have defined() return boolean type.

Reproduce code:
---------------
echo gettype(isset($test));
echo "<br>";
echo gettype(defined("test"));


Expected result:
----------------
boolean
boolean


Actual result:
--------------
boolean
integer

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-03-01 03:05 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC