- Fixed bug #27443 (defined() returns wrong type).